[package]
name = "evdev-uinput-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.11.0"
evdev-rs = { version = "0.5.0", features = ["serde"] }
anyhow = "1.0.43"
nix = "0.22.1"
serde_json = "1.0.66"